--- a/modules/cpp-core-mmciflib-wrapper-gen/core_mmciflib_binder_Darwin.config
+++ b/modules/cpp-core-mmciflib-wrapper-gen/core_mmciflib_binder_Darwin.config
@@ -1,5 +1,6 @@
 # skip these methods  -
 #
+-class CharEqualTo
 -function ITTable::RebuildIndex
 -function ITTable::RebuildIndices
 -function CharLess::GetCompareType
@@ -39,4 +40,14 @@
 -function ITTable::AddColumn
 -function ITTable::GetColumn
 -function ITTable::operator()
+#
+# In your Binder config file add line like this:
+# this will disable bindings generation for all std:: classes
+# -namespace std
+# this will ask Binder to include stl_binders.hpp in all generated files
++include "pybind11/stl.h"
+# this will instruct Binder to not bind std::map and std::vector directly but instead
+#  call external functions binder::vector_binder and binder::map_binder (located in stl_binders.hpp)
+#+binder std::vector binder::vector_binder
+#+binder std::map    binder::map_binder
 #
