Working tests with core and py modules -

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36, py27
-#envlist = py36
+#envlist = py36, py27
+envlist = py36
 
 [testenv]
 commands = {envpython} setup.py test
