Unifying API calling conventions.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,15 @@
 #envlist = py36, py27
 envlist = py36
 
-[testenv]
-commands = {envpython} setup.py test
-deps =
+#[testenv]
+#commands = {envpython} setup.py test
+#deps =
 
+[testenv]
+deps =
+  tox-cmake
+changedir = {toxinidir}/build/{envname}
+commands =
+  tox-cmake ">=2.8,<3" ../..
+  tox-cmake ">=2.8,<3" --build . --config Debug
+  tox-ctest ">=2.8,<3" --build-config Debug
