Tox issues resolved -  all tests passing on osx with py 27 & 36

--- a/tox.ini
+++ b/tox.ini
@@ -4,18 +4,9 @@
 # and then run "tox" from this directory.
 
 [tox]
-#envlist = py36, py27
-envlist = py36
-
-#[testenv]
-#commands = {envpython} setup.py test
-#deps =
+envlist = py36, py27
+#envlist = py36
 
 [testenv]
+commands = {envpython} setup.py test
 deps =
-  tox-cmake
-changedir = {toxinidir}/build/{envname}
-commands =
-  tox-cmake ">=2.8,<3" ../..
-  tox-cmake ">=2.8,<3" --build . --config Debug
-  tox-ctest ">=2.8,<3" --build-config Debug
