Preliminary Py37 support, add coverage and code style tests

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,70 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py36, py27
+envlist = py37, py36, py27, flake8, coverage-macos
 
 [testenv]
+platform=
+       macos: darwin
+       linux: linux
+
+basepython =
+    py27: python2.7
+    py36: python3.6
+    py37: python3.7
+
+whitelist_externals = echo
+
 recreate = True
-commands = {envpython} setup.py test
+
+commands =
+    echo "Starting tests"
+    {envpython} -V
+    {envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    echo "Completed tests"
+
 deps =
+
+
+[testenv:flake8]
+basepython = python3.6
+skip_install = true
+deps =
+    flake8
+    flake8-docstrings>=0.2.7
+    flake8-import-order>=0.9
+commands =
+    #flake8 --max-line-length=240 --ignore=D2,D4,E112,E113,E26      --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
+    flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
+
+#
+# PyLine is working but is not completely configured.
+#
+[testenv:pylint]
+basepython = python3.6
+skip_install = true
+deps =
+    pyflakes
+    pylint
+commands =
+    pylint --rcfile=.pylintrc --ignore=mmcif/modules/,mmcif/scripts mmcif/ setup.py
+#
+
+[testenv:coverage-macos]
+basepython = python3.6
+platform=macos: darwin
+#skip_install = true
+
+deps =  coverage
+
+commands =
+    echo "Evaluating coverage (macos)"
+    coverage erase
+    coverage run --parallel-mode --omit="mmcif/tests/*","mmcif/schema/*","mmcif/scripts/*" --source mmcif/ -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    coverage combine
+    #
+    coverage report --omit="mmcif/tests*","mmcif/modules/*","mmcif/scripts/*"   --show-missing --fail-under=50
+    - coverage html
+    echo "Done with coverage (macos)"
+
+#
