--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,14 +43,14 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
         message(FATAL_ERROR "GCC version must be at least 4.8!")
     endif()
-    set(warnings " -Wall -Wno-unused-variable -Wno-unused-value -Wno-unused-but-set-variable")
+    set(warnings " -Wall -Wno-unused-variable -Wno-unused-value -Wno-unused-but-set-variable -Wno-deprecated-declarations")
     # set(WRAPPER_DIR_EXT "Linux")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
      if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.1)
         message(FATAL_ERROR "Clang version must be at least 8.1!")
     endif()
     #set(warnings "-Wall -Wextra -Werror")
-    set(warnings " -Wall -Wno-unused-variable")
+    set(warnings " -Wall -Wno-unused-variable -Wno-deprecated-declarations")
     #set(WRAPPER_DIR_EXT "Darwin")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     message(FATAL_ERROR "No current support for MSVC!")
