--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,10 @@ recreate = True
 commands =
     echo "Starting tests"
     {envpython} -V
-    {envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    #
+    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    # The above is reusing extensions across versions - falling back to using setup.py -
+    {envpython} setup.py test
     echo "Completed tests"
 
 deps =
