Fixed missing config in tox.ini to force extension rebuilds for each interpreter.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,13 @@
 
 [tox]
 envlist = py37, py36, py27, flake8, coverage-macos
+#
+skip_missing_interpreters = True
+#
+# The mmcif extension dependency requires a source build for each version of the interpreter.
+#
+skip_install = False
+skipsdist = False
 
 [testenv]
 platform=
@@ -24,9 +31,9 @@ commands =
     echo "Starting tests"
     {envpython} -V
     #
-    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    {envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
     # The above is reusing extensions across versions - falling back to using setup.py -
-    {envpython} setup.py test
+    #{envpython} setup.py test
     echo "Completed tests"
 
 deps =
