Final cleanup and tox adjustments on macos

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,22 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
+##
+# File:  tox.ini
+# Date: 17-Aug-2017 jdw
+#
+# Updates:
+#   9-Aug-2018 jdw adjust path before performing tests to avoid path conflicts
+#   9-Aug-2018 jdw disabled coverage tests for the moment
+##
 
 [tox]
-envlist = py37, py36, py27, flake8, coverage-macos
+#envlist = py37, py36, py27, flake8, coverage-macos
+envlist = py37, py36, py27, flake8
+#
+
 #
 skip_missing_interpreters = True
-#
-# The mmcif extension dependency requires a source build for each version of the interpreter.
-#
 skip_install = False
 skipsdist = False
+alwayscopy = True
 
 [testenv]
 platform=
@@ -27,14 +32,19 @@ whitelist_externals = echo
 
 recreate = True
 
+# Change from the top directory (holding tox.ini) to the directory containing test files
+# avoiding path conflicts for imports with the development source tree.
+#
+changedir = mmcif/tests
+
 commands =
-    echo "Starting tests"
+    echo "++++++ Starting tests ++++++++ "
     {envpython} -V
-    #
-    {envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    {envpython} -m unittest discover  --start-directory . --pattern "*Tests.py"
     # The above is reusing extensions across versions - falling back to using setup.py -
     #{envpython} setup.py test
-    echo "Completed tests"
+    echo "++++++ Completed tests ++++++++ "
 
 deps =
 
@@ -62,7 +72,6 @@ deps =
 commands =
     pylint --rcfile=.pylintrc --ignore=mmcif/modules/,mmcif/scripts mmcif/ setup.py
 #
-
 [testenv:coverage-macos]
 basepython = python3.6
 platform=macos: darwin
@@ -71,13 +80,12 @@ platform=macos: darwin
 deps =  coverage
 
 commands =
-    echo "Evaluating coverage (macos)"
+    echo "Evaluating coverage (Macos)"
     coverage erase
-    coverage run --parallel-mode --omit="mmcif/tests/*","mmcif/schema/*","mmcif/scripts/*" --source mmcif/ -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    coverage run --parallel-mode --omit="mmcif/tests/*","mmcif/schema/*","mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
     coverage combine
     #
     coverage report --omit="mmcif/tests*","mmcif/modules/*","mmcif/scripts/*"   --show-missing --fail-under=50
     - coverage html
-    echo "Done with coverage (macos)"
-
+    echo "Done with coverage (Macos)"
 #
