--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,11 @@
 # Updates:
 #   9-Aug-2018 jdw adjust path before performing tests to avoid path conflicts
 #   9-Aug-2018 jdw disabled coverage tests for the moment
+#  26-Aug-2018 jdw resolve the path shadowing problem with coverage.
 ##
 
 [tox]
-#envlist = py37, py36, py27, flake8, coverage-macos
-envlist = py37, py36, py27, flake8
+envlist = flake8, py37, py36, py27, coverage-macos,
 #
 
 #
@@ -73,19 +73,25 @@ commands =
     pylint --rcfile=.pylintrc --ignore=mmcif/modules/,mmcif/scripts mmcif/ setup.py
 #
 [testenv:coverage-macos]
+#
 basepython = python3.6
 platform=macos: darwin
 #skip_install = true
 
 deps =  coverage
 
+# To avoid path shadowing the git repo and the installed virtual env in tox
+# use {toxinidir} in the coverage commands to locate the test code.
+changedir = {envtmpdir}
+
 commands =
-    echo "Evaluating coverage (Macos)"
+    echo "Evaluating coverage (MacOS)"
+    {envpython} -V
     coverage erase
-    coverage run --parallel-mode --omit="mmcif/tests/*","mmcif/schema/*","mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
+    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "*Tests.py"
     coverage combine
     #
-    coverage report --omit="mmcif/tests*","mmcif/modules/*","mmcif/scripts/*"   --show-missing --fail-under=50
+    coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
     - coverage html
-    echo "Done with coverage (Macos)"
+    echo "Done with coverage (MacOS)"
 #
