--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         message(FATAL_ERROR "Clang version must be at least 8.1!")
     endif()
     #set(warnings "-Wall -Wextra -Werror")
-    set(warnings " -Wall -Wno-unused-variable -Wno-deprecated-declarations")
+    set(warnings " -Wall -Wno-unused-variable -Wno-deprecated-declarations -Wno-register")
     #set(WRAPPER_DIR_EXT "Darwin")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     message(FATAL_ERROR "No current support for MSVC!")
