--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@
 ##
 
 [tox]
-envlist = flake8, py37, py36, py27, coverage-macos,
+envlist = flake8, py37, py27, coverage-macos
 #
 
 #
@@ -25,7 +25,6 @@ platform=
 
 basepython =
     py27: python2.7
-    py36: python3.6
     py37: python3.7
 
 whitelist_externals = echo
@@ -50,7 +49,7 @@ deps =
 
 
 [testenv:flake8]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     flake8
@@ -64,7 +63,7 @@ commands =
 # PyLine is working but is not completely configured.
 #
 [testenv:pylint]
-basepython = python3.6
+basepython = python3.7
 skip_install = true
 deps =
     pyflakes
@@ -74,7 +73,7 @@ commands =
 #
 [testenv:coverage-macos]
 #
-basepython = python3.6
+basepython = python3.7
 platform=macos: darwin
 #skip_install = true
 
