V030 - Relax attribute coverage requirements on dictionary initialization

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@
 #   9-Aug-2018 jdw adjust path before performing tests to avoid path conflicts
 #   9-Aug-2018 jdw disabled coverage tests for the moment
 #  26-Aug-2018 jdw resolve the path shadowing problem with coverage.
+#  28-Jan-2019 jdw retire Py 3.6 tests
 ##
 
 [tox]
