V035 - Add method getAttributeUniqueValueList().

--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ commands =
     flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 
 #
-# PyLine is working but is not completely configured.
+# pyLint is working but is not completely configured.
 #
 [testenv:pylint]
 basepython = python3.7
