Added DictMethodRunner module and changed test naming conventions.

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@
 #   9-Aug-2018 jdw disabled coverage tests for the moment
 #  26-Aug-2018 jdw resolve the path shadowing problem with coverage.
 #  28-Jan-2019 jdw retire Py 3.6 tests
+#   5-Jun-2019 jdw change test naming convention
 ##
 
 [tox]
@@ -40,8 +41,8 @@ changedir = mmcif/tests
 commands =
     echo "++++++ Starting tests ++++++++ "
     {envpython} -V
-    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "*Tests.py"
-    {envpython} -m unittest discover  --start-directory . --pattern "*Tests.py"
+    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "test*,py"
+    {envpython} -m unittest discover  --start-directory . --pattern "test*.py"
     # The above is reusing extensions across versions - falling back to using setup.py -
     #{envpython} setup.py test
     echo "++++++ Completed tests ++++++++ "
@@ -88,7 +89,7 @@ commands =
     echo "Evaluating coverage (MacOS)"
     {envpython} -V
     coverage erase
-    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "*Tests.py"
+    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
     coverage combine
     #
     coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
