V040 - Update development workflows and cleanup

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@
 #  26-Aug-2018 jdw resolve the path shadowing problem with coverage.
 #  28-Jan-2019 jdw retire Py 3.6 tests
 #   5-Jun-2019 jdw change test naming convention
+#  25-Jun-2019 jdw change workflow (black/pylint)
 ##
-
 [tox]
-envlist = flake8, py37, py27, coverage-macos
+envlist = formatter, pylint, py37, py27, coverage-macos
 #
 
 #
@@ -49,6 +49,26 @@ commands =
 
 deps =
 
+#
+[testenv:pylint]
+basepython = python3.7
+skip_install = false
+deps =
+    pylint
+commands =
+    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
+
+#
+[testenv:formatting]
+basepython = python3.7
+deps =
+    black>=19.3b0
+#    isort>=4.3.20
+commands =
+    black --version
+    black --line-length 180 --check  mmcif
+#    isort -rc mmcif --check-only
+changedir = {toxinidir}
 
 [testenv:flake8]
 basepython = python3.7
@@ -61,17 +81,7 @@ commands =
     #flake8 --max-line-length=240 --ignore=D2,D4,E112,E113,E26      --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
     flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 
-#
-# pyLint is working but is not completely configured.
-#
-[testenv:pylint]
-basepython = python3.7
-skip_install = true
-deps =
-    pyflakes
-    pylint
-commands =
-    pylint --rcfile=.pylintrc --ignore=mmcif/modules/,mmcif/scripts mmcif/ setup.py
+
 #
 [testenv:coverage-macos]
 #
