Adding CI/CD pipeline configuration and updating tox

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,8 @@
 #  25-Jun-2019 jdw change workflow (black/pylint)
 ##
 [tox]
-envlist = formatter, pylint, py37, py27, coverage-macos
+envlist = formatter, pylint, py37, py27, coverage
+envlist = pylint{37}, formatting{37}, py{37,27}, coverage{37}
 #
 
 #
@@ -56,8 +57,9 @@ skip_install = false
 deps =
     pylint
 commands =
+    echo "Begin linting"
     pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
-
+    echo "Completed linting"
 #
 [testenv:formatting]
 basepython = python3.7
@@ -65,9 +67,11 @@ deps =
     black>=19.3b0
 #    isort>=4.3.20
 commands =
+    echo "Begin format check"
     black --version
     black --line-length 180 --check  mmcif
 #    isort -rc mmcif --check-only
+    echo "Completed format check"
 changedir = {toxinidir}
 
 [testenv:flake8]
@@ -78,25 +82,21 @@ deps =
     flake8-docstrings>=0.2.7
     flake8-import-order>=0.9
 commands =
-    #flake8 --max-line-length=240 --ignore=D2,D4,E112,E113,E26      --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
     flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 
 
 #
-[testenv:coverage-macos]
+[testenv:coverage]
 #
 basepython = python3.7
-platform=macos: darwin
 #skip_install = true
-
 deps =  coverage
-
 # To avoid path shadowing the git repo and the installed virtual env in tox
 # use {toxinidir} in the coverage commands to locate the test code.
 changedir = {envtmpdir}
 
 commands =
-    echo "Evaluating coverage (MacOS)"
+    echo "Evaluating coverage"
     {envpython} -V
     coverage erase
     coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
@@ -104,5 +104,5 @@ commands =
     #
     coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
     - coverage html
-    echo "Done with coverage (MacOS)"
+    echo "Done with coverage"
 #
