Make formatting and linting py37 specific.

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,9 @@
 #  28-Jan-2019 jdw retire Py 3.6 tests
 #   5-Jun-2019 jdw change test naming convention
 #  25-Jun-2019 jdw change workflow (black/pylint)
+#   1-Jul-2019 jdw make linting and formatting py37 only
 ##
 [tox]
-envlist = formatter, pylint, py37, py27, coverage
 envlist = pylint{37}, formatting{37}, py{37,27}, coverage{37}
 #
 
