Updating pipeline configuration

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@
 #   1-Jul-2019 jdw make linting and formatting py37 only
 ##
 [tox]
-envlist = pylint{37}, formatting{37}, py{37,27}, coverage{37}
+envlist = pylint, formatting, py{37,27}, coverage
 #
 
 #
@@ -51,7 +51,7 @@ commands =
 deps =
 
 #
-[testenv:pylint]
+[testenv:pylint:py37]
 basepython = python3.7
 skip_install = false
 deps =
@@ -61,7 +61,7 @@ commands =
     pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
     echo "Completed linting"
 #
-[testenv:formatting]
+[testenv:formatting:py37]
 basepython = python3.7
 deps =
     black>=19.3b0
@@ -74,7 +74,7 @@ commands =
     echo "Completed format check"
 changedir = {toxinidir}
 
-[testenv:flake8]
+[testenv:flake8:py37]
 basepython = python3.7
 skip_install = true
 deps =
@@ -86,7 +86,7 @@ commands =
 
 
 #
-[testenv:coverage]
+[testenv:coverage:py37]
 #
 basepython = python3.7
 #skip_install = true
