Update tox with version specific fliters and restore flake8 tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,7 @@
 #   1-Jul-2019 jdw make linting and formatting py37 only
 ##
 [tox]
-envlist = pylint, formatting, py{37,27}, coverage
-#
-
+envlist = pylint, flake8, formatting, py{37,27}, coverage
 #
 skip_missing_interpreters = True
 skip_install = False
@@ -31,7 +29,6 @@ basepython =
     py37: python3.7
 
 whitelist_externals = echo
-
 recreate = True
 
 # Change from the top directory (holding tox.ini) to the directory containing test files
@@ -51,30 +48,31 @@ commands =
 deps =
 
 #
-[testenv:pylint:py37]
+[testenv:pylint]
 basepython = python3.7
 skip_install = false
 deps =
     pylint
 commands =
-    echo "Begin linting"
-    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
-    echo "Completed linting"
+    {py37}: echo "Begin linting"
+    {py37}: pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
+    {py37}: echo "Completed linting"
+
 #
-[testenv:formatting:py37]
+[testenv:formatting]
 basepython = python3.7
 deps =
     black>=19.3b0
 #    isort>=4.3.20
 commands =
-    echo "Begin format check"
-    black --version
-    black --line-length 180 --check  mmcif
+    {py37}: echo "Begin format check"
+    {py37}: black --version
+    {py37}: black --line-length 180 --check  mmcif
 #    isort -rc mmcif --check-only
-    echo "Completed format check"
+    {py37}: echo "Completed format check"
 changedir = {toxinidir}
 
-[testenv:flake8:py37]
+[testenv:flake8]
 basepython = python3.7
 skip_install = true
 deps =
@@ -82,12 +80,10 @@ deps =
     flake8-docstrings>=0.2.7
     flake8-import-order>=0.9
 commands =
-    flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
-
+    {py37}: flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 
 #
-[testenv:coverage:py37]
-#
+[testenv:coverage]
 basepython = python3.7
 #skip_install = true
 deps =  coverage
@@ -96,13 +92,13 @@ deps =  coverage
 changedir = {envtmpdir}
 
 commands =
-    echo "Evaluating coverage"
-    {envpython} -V
-    coverage erase
-    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
-    coverage combine
+    {py37}: echo "Evaluating coverage"
+    {py37}: {envpython} -V
+    {py37}: coverage erase
+    {py37}: coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
+    {py37}: coverage combine
     #
-    coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
-    - coverage html
-    echo "Done with coverage"
+    {py37}: coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
+    {py37}: - coverage html
+    {py37}: echo "Done with coverage"
 #
