More configuration refinement

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ skip_install = False
 skipsdist = False
 alwayscopy = True
 
+
 [testenv]
 platform=
        macos: darwin
@@ -35,23 +36,22 @@ recreate = True
 # avoiding path conflicts for imports with the development source tree.
 #
 changedir = mmcif/tests
-
+deps = echo
 commands =
     echo "++++++ Starting tests ++++++++ "
     {envpython} -V
-    #{envpython} -m unittest discover  --start-directory mmcif/tests/ --pattern "test*,py"
     {envpython} -m unittest discover  --start-directory . --pattern "test*.py"
-    # The above is reusing extensions across versions - falling back to using setup.py -
-    #{envpython} setup.py test
     echo "++++++ Completed tests ++++++++ "
 
-deps =
+
 
 #
 [testenv:pylint]
+whitelist_externals = echo
 basepython = python3.7
 skip_install = false
 deps =
+    echo
     pylint
 commands =
     {py37}: echo "Begin linting"
@@ -60,8 +60,10 @@ commands =
 
 #
 [testenv:formatting]
+whitelist_externals = echo
 basepython = python3.7
 deps =
+    echo
     black>=19.3b0
 #    isort>=4.3.20
 commands =
@@ -73,9 +75,11 @@ commands =
 changedir = {toxinidir}
 
 [testenv:flake8]
+whitelist_externals = echo
 basepython = python3.7
 skip_install = true
 deps =
+    echo
     flake8
     flake8-docstrings>=0.2.7
     flake8-import-order>=0.9
@@ -84,9 +88,12 @@ commands =
 
 #
 [testenv:coverage]
+whitelist_externals = echo
 basepython = python3.7
 #skip_install = true
-deps =  coverage
+deps =
+    echo
+    coverage
 # To avoid path shadowing the git repo and the installed virtual env in tox
 # use {toxinidir} in the coverage commands to locate the test code.
 changedir = {envtmpdir}
