--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,5 +49,5 @@ steps:
   - script: pip install tox
     displayName: 'Install Tox'
 
-  - script: tox -vv
+  - script: tox -v
     displayName: 'Run Tox'
