Tweaks to tox configuration for multiversion python support

--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@
 #  28-Jan-2019 jdw retire Py 3.6 tests
 #   5-Jun-2019 jdw change test naming convention
 #  25-Jun-2019 jdw change workflow (black/pylint)
-#   1-Jul-2019 jdw make linting and formatting py37 only
+#   1-Jul-2019 jdw make linting, formatting and coverage py37 only
 ##
 [tox]
-envlist = pylint, flake8, formatting, py{37,27}, coverage
+envlist = py37-pylint, py37-flake8, py37-formatting, py{37,27}, py37-coverage
 #
 skip_missing_interpreters = True
 skip_install = False
@@ -24,7 +24,6 @@ alwayscopy = True
 platform=
        macos: darwin
        linux: linux
-
 basepython =
     py27: python2.7
     py37: python3.7
@@ -46,37 +45,37 @@ commands =
 
 
 #
-[testenv:pylint]
+[testenv:py37-pylint]
 whitelist_externals = echo
-basepython = python3.7
+basepython = py37: python3.7
 skip_install = false
 deps =
     echo
     pylint
 commands =
-    {py37}: echo "Begin linting"
-    {py37}: pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
-    {py37}: echo "Completed linting"
+    echo "Begin linting"
+    pylint --disable=R,C --reports=n --rcfile={toxinidir}/pylintrc  mmcif
+    echo "Completed linting"
 
 #
-[testenv:formatting]
+[testenv:py37-formatting]
 whitelist_externals = echo
-basepython = python3.7
+basepython = py37: python3.7
 deps =
     echo
     black>=19.3b0
 #    isort>=4.3.20
 commands =
-    {py37}: echo "Begin format check"
-    {py37}: black --version
-    {py37}: black --line-length 180 --check  mmcif
+    echo "Begin format check"
+    black --version
+    black --line-length 180 --check  mmcif
 #    isort -rc mmcif --check-only
-    {py37}: echo "Completed format check"
+    echo "Completed format check"
 changedir = {toxinidir}
 
-[testenv:flake8]
+[testenv:py37-flake8]
 whitelist_externals = echo
-basepython = python3.7
+basepython = py37: python3.7
 skip_install = true
 deps =
     echo
@@ -84,12 +83,12 @@ deps =
     flake8-docstrings>=0.2.7
     flake8-import-order>=0.9
 commands =
-    {py37}: flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
+    flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 
 #
-[testenv:coverage]
+[testenv:py37-coverage]
 whitelist_externals = echo
-basepython = python3.7
+basepython = py37: python3.7
 #skip_install = true
 deps =
     echo
@@ -97,15 +96,13 @@ deps =
 # To avoid path shadowing the git repo and the installed virtual env in tox
 # use {toxinidir} in the coverage commands to locate the test code.
 changedir = {envtmpdir}
-
 commands =
-    {py37}: echo "Evaluating coverage"
-    {py37}: {envpython} -V
-    {py37}: coverage erase
-    {py37}: coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
-    {py37}: coverage combine
+    echo "Evaluating coverage"
+    {envpython} -V
+    coverage erase
+    coverage run --parallel-mode --omit="{toxinidir}/mmcif/tests/*","{toxinidir}mmcif/schema/*","{toxinidir}/mmcif/scripts/*" --source mmcif -m unittest discover  --start-directory {toxinidir}/mmcif/tests --pattern "test*.py"
+    coverage combine
+        coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
+    - coverage html
+    echo "Done with coverage"
     #
-    {py37}: coverage report --omit="{toxinidir}/mmcif/tests*","{toxinidir}/mmcif/modules/*","{toxinidir}/mmcif/scripts/*"   --show-missing --fail-under=50
-    {py37}: - coverage html
-    {py37}: echo "Done with coverage"
-#
