--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ deps = echo
 commands =
     echo "++++++ Starting tests ++++++++ "
     {envpython} -V
-    {envpython} -m unittest discover  --start-directory . --pattern "test*.py"
+    {envpython} -m unittest discover -v --start-directory . --pattern "test*.py"
     echo "++++++ Completed tests ++++++++ "
 
 
@@ -83,8 +83,8 @@ deps =
     flake8-docstrings>=0.2.7
     flake8-import-order>=0.9
 commands =
-    flake8 --max-line-length=240 --ignore=D,E112,E113,E114,E26,E402 --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
-
+    # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
+    flake8 --max-line-length=185 --ignore=D,I,E203,W503  -exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 #
 [testenv:py37-coverage]
 whitelist_externals = echo
