Adjust flake8 options

--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ deps =
     flake8-import-order>=0.9
 commands =
     # Exceptions: D for docstrings, I for imports order and formatting, E302 is slice spacing  - W503 multiline spacing incompatible with black
-    flake8 --max-line-length=185 --ignore=D,I,E203,W503  -exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
+    flake8 --max-line-length=185 --ignore=D,I,E203,W503  --exclude=mmcif/modules/,mmcif/scripts,mmcif/io/__init__.py,mmcif/api/__init__.py mmcif/ setup.py
 #
 [testenv:py37-coverage]
 whitelist_externals = echo
